Open resume in current tab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <main class="bg-white text-dark p-4">
         <h2 class="h4 text-center mb-3">Explore</h2>
         
-        <a href="https://cv.stijngeens.com" target="_blank" class="card text-decoration-none text-dark ">
+        <a href="https://cv.stijngeens.com" class="card text-decoration-none text-dark ">
           <div class="card-body d-flex align-items-center">
             <div class="text-dark me-3">
               <i class="fas fa-file-alt fa-2x"></i>
