--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container shadow p-0">
-      <header class="text-center bg-dark text-white p-4">
+      <header class="text-center bg-dark text-white px-4 py-5">
         <img src="./img/me.jpg" alt="Picture of me" width="150" height="150" class="rounded-circle shadow-sm">
         <h1 class="my-3">Stijn Geens</h1>
         <p>Fullstack Developer at Euricom</p>
@@ -31,8 +31,8 @@
         </ul>
       </header>
       
-      <main class="bg-white text-dark p-4">
-        <h2 class="h4 text-center mb-3">Explore</h2>
+      <main class="bg-white text-dark px-4 py-5">
+        <h2 class="h4 text-center mb-4">Explore</h2>
         
         <a href="https://cv.stijngeens.com" class="card text-decoration-none text-dark ">
           <div class="card-body d-flex align-items-center">
