Update job title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header class="text-center bg-dark text-white px-4 py-5">
         <img src="./img/me.jpg" alt="Picture of me" width="150" height="150" class="rounded-circle shadow-sm">
         <h1 class="my-3">Stijn Geens</h1>
-        <p>Fullstack Developer at Euricom</p>
+        <p>Full-stack .NET Developer at Euricom</p>
         
         <ul class="list-inline text-center mb-0">
             <li class="list-inline-item"><a href="mailto:info@stijngeens.com" aria-label="email" class="social-button"><i class="fas fa-envelope fa-lg text-dark"></i></a></li>
